k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: study-match
  namespace: study-match
spec:
  replicas: 2
  selector:
    matchLabels:
      app: study-match
  template:
    metadata:
      labels:
        app: study-match
    spec:
      containers:
      - name: study-match
        image: 416225317325.dkr.ecr.ap-southeast-2.amazonaws.com/study-match-frontend:latest
        ports:
        - containerPort: 80
