k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-match
  namespace: study-match
spec:
  selector:
    app: study-match
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
